# wasabi

./: .appveyor.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
tests/: test_printer.py  test_tables.py  test_traceback.py  test_util.py
wasabi/: __init__.py  about.py  markdown.py  printer.py  tables.py  traceback.py  traceback_printer.py  util.py
wasabi/tests/: test_jupyter.py  test_markdown.py  test_printer.py  test_tables.py  test_traceback.py  test_util.py
wasabi/tests/test-data/: wasabi-test-notebook.ipynb
