[metadata]
version = 1.1.2.dev0
description = A lightweight console printing and formatting toolkit
url = https://github.com/explosion/wasabi
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    colorama >= 0.4.6; sys_platform == "win32" and python_version >= "3.7"
    typing_extensions>=3.7.4.1,<4.5.0; python_version < "3.8"

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
